# httpx

./: .gitignore  pyproject.toml  requirements.txt
httpx/: _client.py  _types.py
httpx/_transports/: default.py  reqwest.py
httpx/_transports/reqwest_native/: Cargo.toml
httpx/_transports/reqwest_native/src/: async_client.rs  async_response.rs  exceptions.rs  lib.rs  proxy_config.rs  trace.rs  utils.rs
tests/: conftest.py  test_asgi.py  test_content.py  test_decoders.py  test_timeouts.py  test_utils.py
tests/benchmark/: client.py
tests/client/: test_async_client.py  test_auth.py  test_event_hooks.py  test_proxies.py  test_redirects.py
tests/models/: test_requests.py  test_responses.py
