[package]
name = "reqwest_native"
version = "1.0.0"
edition = "2024"

[lib]
name = "reqwest_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.24.2", features = ["extension-module"] }
pyo3-async-runtimes = { version = "=0.24.0", features = ["attributes", "tokio-runtime", "unstable-streams"] }
reqwest = { version = "=0.12.15", features = ["default", "rustls-tls", "blocking", "cookies", "gzip", "zstd", "brotli", "deflate", "multipart", "stream", "socks"] }
tokio = "=1.45.0"
futures-util = "0.3.31"

[build-dependencies]
pyo3-build-config = "=0.24.2"
