[package]
name = "reqwest_native"
version = "1.0.0"
edition = "2024"

[lib]
name = "reqwest_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.24.2", features = ["extension-module"] }
pyo3-async-runtimes = { version = "=0.24.0", features = ["attributes", "tokio-runtime", "unstable-streams"] }
reqwest = { version = "=0.12.15", features = ["default", "rustls-tls", "blocking", "cookies", "gzip", "zstd", "brotli", "deflate", "multipart", "stream", "socks"] }
reqwest-middleware = "=0.4.2"
http = "=1.3.1"
tokio = "=1.45.0"
futures-util = "=0.3.31"
async-trait = "=0.1.88"
bytes = "=1.10.1"
pyo3-bytes = "=0.2.0"

[build-dependencies]
pyo3-build-config = "=0.24.2"
